# funds_agentic

./: .gitignore  README.md  pyproject.toml
scripts/: install_playwright.bat
src/funds_agentic/: __init__.py  graph.py  main.py  selectors.py  state.py
src/funds_agentic/nodes/: browser_node.py  config_node.py  funds_node.py  input_node.py  normalize_write_node.py  sectors_node.py
src/funds_agentic/utils/: io_excel.py  io_gsheet.py  logging_setup.py  parsing.py
